Move to Java 11 (#629)